# ai-leetcode

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: pages.yml
artifacts/: README.md
artifacts/benchmark-results/lc-0003/: apple-m1-46b7e27.json
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/appendices/: contributing.md  glossary.md  pattern-index.md  problem-index.md
book/src/guide/: evidence.md  how-to-read.md
book/src/parts/: 01-modeling.md  02-invariants.md  03-sequences.md  04-monotonic-structures.md  05-graphs.md  06-search.md  07-dynamic-programming.md  08-greedy.md  09-performance.md  10-synthesis.md
book/src/problems/: lc-0003.md
book/theme/: algo-lab.js  algo-viz.js  algo.css
content/: taxonomy.yaml
content/patterns/_template/: chapter.md  pattern.yaml
docs/: architecture.md  book-outline.md
runner/: README.md
solutions/0003/: Cargo.toml  benchmarks.yaml  leetcode-submit.rs
solutions/0003/benches/: compare.rs
solutions/0003/examples/: generate_trace.rs
solutions/0003/src/: brute_force.rs  last_seen_ascii.rs  last_seen_hash_map.rs  leetcode.rs  lib.rs  sliding_hash_set.rs  trace.rs
solutions/0003/testdata/: cases.json
solutions/0003/tests/: differential.rs  trace_contract.rs
specs/: README.md  benchmarking.spec.md  ch03-lc0003-longest-substring.spec.md  problem-authoring.spec.md  publishing.spec.md  solution-verification.spec.md  synthesis.spec.md  visualization.spec.md
templates/: chapter-spec.md  pattern-page.md  problem-page.md  structure-page.md
tools/: README.md
(+18 files in other folders)
