[package]
name = "lc0003-longest-substring"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "compare"
harness = false

[lints]
workspace = true

